# zoomcamp-data-engineer

./: .gitignore  LICENCE  README.md
module-1/: Dockerfile  README.md  homework-solution-1.md  ingestion.py  pyproject.toml  sql_exercises.ipynb
