[project]
name = "module-1"
version = "0.1.0"
description = ""
authors = [
    {name = "DanLeiria",email = "daniel.h.leiria@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = "3.12.*"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pgcli (>=4.4.0,<5.0.0)",
    "pyarrow (>=23.0.0,<24.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
